@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2013-02-10 (SVN):
+    * timidity: minor edits for byte order macro checks.
+
+2013-02-10 (SVN):
     * common/q_endian.h: updated with addidional predef.sourceforge.net
       information.
 
